<?xml version="1.0"?>
<package>
  <name>catkin_roscpp_sample</name>
  <version>0.0.0</version>
  <description>The catkin_roscpp_sample package</description>
  <maintainer email="garaemon@todo.todo">garaemon</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
